# fast-api-e-commerce

./: README.md  pyproject.toml
src/: main.py  notes.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: orders.py  products.py  users.py
src/api/api_v1/endpoints/models/: input_models.py  input_models_v2.py  model_enums.py  output_models.py
src/database_io/: database_connection.py
test/: pytest.ini
test/test_api_v1/: conftest.py  test_orders.py  test_products.py
test/test_api_v1/test_data/: test_delivery_address.json
