[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["roberto <robertointerface@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
mangum = "^0.17.0"
python-multipart = "^0.0.6"
pymongo = {extras = ["aws"], version = "^4.3.3"}
botocore = "^1.29.103"
boto3 = "^1.26.103"
motor = "^3.1.1"
httpx = "^0.23.3"
websockets = "^11.0"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
pytest-env = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
